Fixed Steam socials and mobile layout on Safari

--- a/public/assets/ss-bulma.css
+++ b/public/assets/ss-bulma.css
@@ -1077,12 +1077,6 @@ table th {
 	text-align: right !important;
 }
 
-@media screen and (max-width: 768px) {
-	.has-text-centered-mobile {
-		text-align: center !important;
-	}
-}
-
 @media screen and (min-width: 769px), print {
 	.has-text-centered-tablet {
 		text-align: center !important;
